# gradientai-python-sdk

./: .gitignore  README.md  pyproject.toml
docs/: BaseModel.md  CompleteModelBodyParams.md  CompleteModelSuccess.md  CreateModelRequestBody.md  CreateModelRequestBodyInitialHyperparameters.md  CreateModelRequestBodyInitialHyperparametersTrainingArguments.md  CreateModelRequestBodyModel.md  DeleteModelError.md  FineTuneModelRequestBodySamplesInnerFineTuningParameters.md  FineTuneModelSuccess.md  GetModelError.md  GetModelIdParameter.md  ListModelsSuccessModelsInnerOneOf.md  ListModelsSuccessModelsInnerOneOf1.md  ModelsApi.md  TrainModelError.md  TrainModelRequestBody.md  TrainModelRequestBodySamplesInner.md  TrainModelRequestBodySamplesInnerFineTuningParameters.md  TrainModelSuccess.md  UserModel.md
gradientai/: __init__.py  __init__.pyi  _base_model.py  _embeddings_model.py  _gradient.py  _model.py  _model_adapter.py  _rag.py  _types.py
gradientai/helpers/: asyncio_threads.py  env_manager.py
gradientai/openapi/: client_README.md
gradientai/openapi/client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
gradientai/openapi/client/api/: __init__.py  blocks_api.py  embeddings_api.py  files_api.py  models_api.py  rag_api.py
gradientai/openapi/client/docs/: AddFilesToRagCollectionBodyParams.md  AddFilesToRagCollectionError.md  AnalyzeSentimentBodyParams.md  AnalyzeSentimentBodyParamsExamplesInner.md  AnalyzeSentimentError.md  AnalyzeSentimentSuccess.md  BaseModel.md  BlocksApi.md  CompleteModelBodyParams.md  CompleteModelBodyParamsGuidance.md  CompleteModelBodyParamsRag.md  CompleteModelError.md  CompleteModelErrorOneOf.md  CompleteModelErrorOneOf1.md  CompleteModelErrorOneOf10.md  CompleteModelErrorOneOf1Payload.md  CompleteModelErrorOneOf2.md  CompleteModelErrorOneOf3.md  CompleteModelErrorOneOf4.md  CompleteModelErrorOneOf5.md  CompleteModelErrorOneOf6.md  CompleteModelErrorOneOf7.md  CompleteModelErrorOneOf8.md  CompleteModelErrorOneOf9.md  CompleteModelErrorOneOfPayload.md  CompleteModelErrorOneOfPayloadFlaggedContentInner.md  CompleteModelSuccess.md  CreateAudioTranscriptionBodyParams.md  CreateAudioTranscriptionError.md  CreateAudioTranscriptionSuccess.md  CreateModelBodyParams.md  CreateModelBodyParamsInitialHyperparameters.md  CreateModelBodyParamsInitialHyperparametersLoraHyperparameters.md  CreateModelBodyParamsInitialHyperparametersTrainingArguments.md  CreateModelBodyParamsModel.md  CreateModelError.md  CreateModelSuccess.md  CreateRagCollectionBodyParams.md  CreateRagCollectionBodyParamsChunker.md  CreateRagCollectionBodyParamsFilesInner.md  (+87 more)
gradientai/openapi/client/models/: __init__.py  add_files_to_rag_collection_body_params.py  add_files_to_rag_collection_error.py  analyze_sentiment_body_params.py  analyze_sentiment_body_params_examples_inner.py  analyze_sentiment_error.py  analyze_sentiment_success.py  base_model.py  complete_model_body_params.py  complete_model_body_params_guidance.py  complete_model_body_params_rag.py  complete_model_error.py  complete_model_error_one_of.py  complete_model_error_one_of1.py  complete_model_error_one_of10.py  complete_model_error_one_of1_payload.py  complete_model_error_one_of2.py  complete_model_error_one_of3.py  complete_model_error_one_of4.py  complete_model_error_one_of5.py  complete_model_error_one_of6.py  complete_model_error_one_of7.py  complete_model_error_one_of8.py  complete_model_error_one_of9.py  complete_model_error_one_of_payload.py  complete_model_error_one_of_payload_flagged_content_inner.py  complete_model_success.py  create_audio_transcription_body_params.py  create_audio_transcription_error.py  create_audio_transcription_success.py  create_model_body_params.py  create_model_body_params_initial_hyperparameters.py  (+91 more)
gradientai/pydantic_models/: types.py
(+140 files in other folders)
