[tool.poetry]
name = "gradientai"
version = "1.7.0"
description = "Gradient AI API"
authors = ["Gradient AI Support <support@gradient.ai>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Preemo-Inc/gradientai-python-sdk"
keywords = [
    "Gradient AI API",
    "ai",
    "artificial intelligence",
    "fine-tuning",
    "large language model",
    "llm",
    "gradient",
    "gradient ai"
  ]

[tool.poetry.dependencies]
aenum = ">=3.1.11"
pydantic = "^1.10.5, <2"
python = "^3.8.1"
python-dateutil = ">=2.8.2"
urllib3 = ">= 1.25.3"

[tool.poetry.dev-dependencies]
autoflake = "2.0.1"
black = "22.3.0"
build = "0.10.0"
flake8 = "6.0.0"
Flake8-pyproject = "1.2.3"
isort = "5.10.1"
mypy = "1.3.0"
pep8-naming = "0.13.0"
pytest = "7.2.1"
python-dotenv = "1.0.0"
twine = "4.0.2"

[tool.autoflake]
check = true
ignore-init-module-imports = true
in-place = true
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
line-length = 80

# This configuration works thanks to Flake8-pyproject
[tool.flake8]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".venv",
  "__pycache__",
  "*.pyi",
]
# options copied from https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
extend-ignore = [
  "E203", # Whitespace before ':'
  "E501", # Line too long
]
max-line-length = 88
select = [
  "B",
  "B950",
  "C",
  "E",
  "F",
  "W",
]

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
